[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.2"
chrono = "0.4"
tokio-tungstenite = "0.17.1"
tungstenite = "0.17.2"

