[package]
name = "vanilla"
version = "0.1.0"
authors = ["Sivert Johansen <sivert-joh@hotmail.com>"]
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
futures = "0.3.28"
gloo-net = { version = "0.3.0", features = ["websocket"] }
gloo-timers = { version = "0.2.6", features = ["futures"] }
gloo-utils = "0.1.7"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Node", "Text"] }
