[package]
name = "vanilla"
version = "0.1.0"
authors = ["Sivert Johansen <sivert-joh@hotmail.com>"]
edition = "2021"

[dependencies]
async-channel = "1.9.0"
console_error_panic_hook = "0.1"
futures = "0.3.28"
gloo-events = "0.1.2"
gloo-net = { version = "0.3.1", features = ["websocket"] }
gloo-timers = { version = "0.2.6", features = ["futures"] }
gloo-utils = "0.1.7"
js-sys = "0.3.64"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Node", "Text", "EventListener", "EventTarget", "Location", "MouseEvent", "InputEvent"] }
